@@ -1,5 +1,6 @@
 Version 5.6.1 (TBD)
     Fixed an issue where copying and pasting table columns resulted in invalid HTML when using colgroups #TINY-6684
+    Fixed an issue where the toolbar would render with the wrong width for inline editors in some situations #TINY-6683
 Version 5.6.0 (2020-11-18)
     Added new `BeforeOpenNotification` and `OpenNotification` events which allow internal notifications to be captured and modified before display #TINY-6528
     Added support for `block` and `unblock` methods on inline dialogs #TINY-6487
